# CC4950-Design-Project

pico-lorawan/: CMakeLists.txt
pico-lorawan/examples/assignment_i2c/: CMakeLists.txt  config.h  main.c
pico-lorawan/examples/hello_otaa/: main.c
pico-lorawan/examples/otaa_temperature_led/: CMakeLists.txt  main.c
pico-lorawan/lab2/: lorawan.c
pico-lorawan/lab3/: CMakeLists.txt  main.c  uplink_formatter.js
